--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     <li>background-color: #EED54F</li>
                     <li>color: rgb(255, 0, 70)</li>
                     <li>transition: color 0.1 ease-in, background-color 0.5 ease-in</li>
+                    <li>opacity: 0.75%</li>
                 </ul>
             </div>
         </section>
